--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,5 +9,14 @@
 cmake_minimum_required (VERSION 2.8)
 project(cdlList)
 
+#Set the location of the executable
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
+
+#Use c++11
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
+
+#Set the executable .cpp source dependencies
+set(src cdlList_Test.cpp)
+
 #Add the executable, which will be in build/bin
-add_subdirectory(src)
+add_executable(cdlList_Test ${src})
